<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="search_title">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="open_folder">Open folder</string>
    <string name="sort">Sort</string>
    <string name="Shuffle">Shuffle</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_artist">Sort by Artist</string>
    <string name="sort_by_album">Sort by Album</string>
    <string name="sort_by_duration">Sort by Duration</string>
    <string name="search_params">Search params</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="_00_00">00:00</string>
    <string name="artist_song">Artist - Song</string>
    <string name="items">Items</string>
    <string name="loop">Loop</string>
    <string name="no_audio">No audio</string>
    <string name="long_click">Long click to add folder</string>
</resources>
