<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/openFolder"
            android:title="@string/open_folder"
            android:icon="@drawable/ic_create_new_folder_black_36dp"
            ></item>
        <item android:id="@+id/sort_params"
            android:icon="@drawable/ic_compare_arrows_black_36dp"
            android:title="@string/sort" >
            <menu>
                <item android:id="@+id/sort_title"
                    android:title="@string/sort_by_title" />
                <item android:id="@+id/sort_artist"
                    android:title="@string/sort_by_artist" />
                <item android:id="@+id/sort_album"
                    android:title="@string/sort_by_album" />
                <item android:id="@+id/sort_duration"
                    android:title="@string/sort_by_duration" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/shuffle"
        android:title="@string/Shuffle"
        android:icon="@drawable/ic_shuffle_black_36px"
        ></item>
</menu>