<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_black_36px"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" >

    </item>

    <item android:id="@+id/serch_params"
        android:icon="@drawable/ic_subject_black_36px"
        app:showAsAction="ifRoom"
        android:title="@string/search_params" >
        <menu>
            <group android:checkableBehavior="single">
            <item android:id="@+id/menu_title"
                android:title="@string/title" />
            <item android:id="@+id/menu_artist"
                android:title="@string/artist" />
            <item android:id="@+id/menu_album"
                android:title="@string/album" />
            </group>
        </menu>
    </item>
</menu>